--- a/style.css
+++ b/style.css
@@ -1,1 +1,22 @@
+bood {
+     background-color: bisque;
+     font-family: Bai Jamjuree;
+     }
 
+     #container {
+
+        }
+
+        footer {
+            background-color: black;
+            color: white;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            height: 2rem;
+            }
+
+footer p {
+       text-align: center;
+       font-size: 0.6rem;
+       
