--- a/style.css
+++ b/style.css
@@ -19,4 +19,7 @@ bood {
 footer p {
        text-align: center;
        font-size: 0.6rem;
-       
+       }
+       height:2rem;
+       margin-top: 0,5rem;
+       font-family: Bai Jamjuree;
