--- a/style.css
+++ b/style.css
@@ -4,8 +4,17 @@ bood {
      }
 
      #container {
-
+            display:flex ;
         }
+
+        .cartao {
+            margin: 1rem 1rem;
+        }
+
+
+
+
+        
 
         footer {
             background-color: black;
